--- a/_posts/2016-06-04-stata-vis2.markdown
+++ b/_posts/2016-06-04-stata-vis2.markdown
@@ -5,4 +5,20 @@ date:   2016-06-04 17:00:00
 categories: Stata cheatsheet
 img: "/img/StataCheatSheet_visualizationCustomization_2016_June.png"
 co-authors: Tim Essam
+link: "http://geocenter.github.io/StataTraining/pdf/StataCheatsheet_visualization2.pdf"
 ---
+
+Cheat sheet on manipulating and customizing visualizations in [Stata 14](http://www.stata.com).  Includes:
+
+* Changing marks
+  * symbology
+  * lines
+  * text
+
+* Changing channels
+  * size
+  * color
+  * shape
+  * position
+* Using themes
+* Saving plots
