--- a/_posts/2016-06-04-stata-vis2.markdown
+++ b/_posts/2016-06-04-stata-vis2.markdown
@@ -4,6 +4,7 @@ title:  "Stata Cheat Sheet: visualization"
 date:   2016-06-04 17:00:00
 categories: Stata cheatsheet
 img: "/img/StataCheatSheet_visualizationCustomization_2016_June.png"
+icon: "/img/stata_vis2_icon.png"
 co-authors: Tim Essam
 link: "http://geocenter.github.io/StataTraining/pdf/StataCheatsheet_visualization2.pdf"
 ---
