--- a/_posts/2016-06-25-muscledb.markdown
+++ b/_posts/2016-06-25-muscledb.markdown
@@ -9,7 +9,7 @@ co-authors: Michael E. Hughes lab and Karyn Esser lab
 link: "http://muscledb.org/MuscleDB"
 ---
 
-###A database of muscle tissue gene expression data
+<h3>A database of muscle tissue gene expression data</h3>
 
 The [Hughes](http://openwetware.org/wiki/HughesLab) (UMSL) and [Esser](http://www.uky.edu/~kaesse2/lab_web_7_2007/SMBL/) (Univ. of Kentucky School of Medicine) labs are assembling a database of muscle tissue gene expression in mice.  Our purpose is to survey the diversity of transcription in skeletal muscle (with exemplar smooth and cardiac muscles for comparison), and provide a resource for the field as a whole.  
 
@@ -24,5 +24,6 @@ please vote for your preferred tissues [here](https://docs.google.com/forms/d/1i
 please email [muscle.database@gmail.com](mailto:muscle.database@gmail.com target="_blank")
 
 <br>
-### Citing MuscleDB
+
+<h3>Citing MuscleDB</h3>
 Anyone is welcome to freely use and adapt both the raw data as well as the [Shiny](shiny.rstudio.com) code used to generate the site and data visualizations under a [Creative Commons Attribution-NonCommercial 4.0 International License](https://creativecommons.org/licenses/by-nc/2.0/). We do ask that you cite **MuscleDB by Laura D. Hughes, Karyn Esser, and Michael E. Hughes**.
