--- a/_posts/2016-06-25-muscledb.markdown
+++ b/_posts/2016-06-25-muscledb.markdown
@@ -3,13 +3,16 @@ layout: post
 title:  "MuscleDB: gene expression database"
 date:   2016-06-25 12:00:00
 categories: genetics
+summary: A database of muscle tissue gene expression data
 img: "/img/muscledb.png"
 icon: "/img/muscledb_icon.png"
 co-authors: Michael E. Hughes lab and Karyn Esser lab
-link: "http://muscledb.org/MuscleDB"
+link: "http://muscledb.org/"
 ---
 
-<h3>A database of muscle tissue gene expression data</h3>
+### View the database at [muscledb.org](http://muscledb.org/)
+
+<br>
 
 The [Hughes](http://openwetware.org/wiki/HughesLab) (UMSL) and [Esser](http://www.uky.edu/~kaesse2/lab_web_7_2007/SMBL/) (Univ. of Kentucky School of Medicine) labs are assembling a database of muscle tissue gene expression in mice.  Our purpose is to survey the diversity of transcription in skeletal muscle (with exemplar smooth and cardiac muscles for comparison), and provide a resource for the field as a whole.  
 
