--- a/_posts/2016-06-25-muscledb.markdown
+++ b/_posts/2016-06-25-muscledb.markdown
@@ -1,8 +1,9 @@
 ---
 layout: post
-title:  "MuscleDB: gene expression database"
+title:  "MuscleDB"
+subtitle: "gene expression database"
 date:   2016-06-25 12:00:00
-categories: genetics
+tag: genetics
 summary: A database of muscle tissue gene expression data
 img: "/img/muscledb.png"
 icon: "/img/muscledb_icon.png"
